Correctly aligned, Job and review pages

--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,6 @@ header{
     font-family: 'Inconsolata', monospace;
 }
 
+.job { 
+    text-align: center
+}
